# splurge-tools

./: .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  INTERFACE_PROTOCOL_DESIGN_REVIEW.md  README.md  build_sdist.py  pyproject.toml
docs/: README-details.md  plan-2025-09-04-1.md  plan-2025-09-05-1.md  research-2025-09-05-1.md
examples/: 01_type_inference_and_validation.py  02_dsv_parsing_and_profiling.py  03_tabular_data_models.py  04_text_processing.py  05_validation_and_transformation.py  06_random_data_generation.py  07_comprehensive_workflows.py  08_decorator_examples.py  README.md  decorator_examples.py  profile_values_performance_benchmark.py  run_all_examples.py  streaming_data_example.py
jpy_tools/: __init__.py  case_helper.py  data_transformer.py  data_validator.py  dsv_helper.py  py.typed  random_helper.py  string_tokenizer.py  tabular_data_model.py  text_file_helper.py  text_normalizer.py  type_helper.py  typed_tabular_data_model.py
specs/: README.md
splurge_tools/: base58.py  case_helper.py  common_utils.py  data_transformer.py  data_validator.py  decorators.py  dsv_helper.py  exceptions.py  factory.py  path_validator.py  protocols.py  py.typed  random_helper.py  resource_manager.py  streaming_tabular_data_model.py  string_tokenizer.py  tabular_data_model.py  tabular_utils.py  text_file_helper.py  text_normalizer.py  type_helper.py  typed_tabular_data_model.py  utility_helper.py  validation_utils.py
tests/: README.md  test_base58.py  test_case_helper.py  test_common_utils.py  test_data_transformer.py  test_data_validation.py  (+22 more)
(+25 files in other folders)
